# parallel-computing-project

./: CMakeLists.txt  config.ini  main.c  read_value.c  read_value.h  structures.h  world_structure.c  world_structure.h
